<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="marvelCharacter"
            type="com.karim.marveldemo.data.MarvelCharacter"/>
        <variable
            name="vm"
            type="com.karim.marveldemo.ui.details.DetailsViewModel" />
        <variable
            name="comicsAdapter"
            type="com.karim.marveldemo.ui.adapters.ComicsAdapter" />
        <variable
            name="eventsAdapter"
            type="com.karim.marveldemo.ui.adapters.EventsAdapter" />
        <variable
            name="seriesAdapter"
            type="com.karim.marveldemo.ui.adapters.SeriesAdapter" />
        <variable
            name="storiesAdapter"
            type="com.karim.marveldemo.ui.adapters.StoriesAdapter" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

                <androidx.appcompat.widget.Toolbar

                    android:id="@+id/details_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@drawable/app_bar_rectangle"
                    app:layout_constraintBottom_toTopOf="@+id/guideline2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:contentInsetStart="0dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/headerImg"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_marginBottom="00dp"
                            android:scaleType="centerCrop"
                            app:characterImage="@{marvelCharacter.thumbnailUrl}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView"
                            tools:src="@drawable/testimage" />

<!--                        <Button-->
<!--                            android:id="@+id/backBtn"-->
<!--                            android:layout_width="0dp"-->
<!--                            android:layout_height="30dp"-->
<!--                            android:layout_marginTop="24dp"-->
<!--                            android:alpha="0.35"-->
<!--                            android:background="@drawable/backbutton_shape"-->
<!--                            android:drawableEnd="@drawable/ic_back"-->
<!--                            app:layout_constraintStart_toStartOf="parent"-->
<!--                            app:layout_constraintTop_toTopOf="parent" />-->

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.appcompat.widget.Toolbar>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.2" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.15" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/charname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@{marvelCharacter.name}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:translationZ="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_toolbar"
                tools:text="@string/character_name" />

            <TextView
                android:id="@+id/description_vh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/charname" />

            <TextView
                android:id="@+id/desc_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@{marvelCharacter.description}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_vh"
                tools:text="@string/dummy_description" />


            <TextView
                android:id="@+id/comics_vh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/comics"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc_tv" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comics_rv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:scrollbars="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comics_vh" />

            <TextView
                android:id="@+id/events_vh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/events"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comics_rv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/events_rv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:scrollbars="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/events_vh" />

            <TextView
                android:id="@+id/series_vh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/series"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/events_rv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/series_rv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:scrollbars="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/series_vh" />

            <TextView
                android:id="@+id/stories_vh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/stories"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/series_rv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/stories_rv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:scrollbars="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stories_vh" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</layout>